<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nl.secureapps.demohacklu.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/label_welcome"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Demo output will appear here ..."
            android:inputType="textMultiLine"
            android:lines="15"
            android:minHeight="179dp"
            android:minLines="10"
            android:padding="10dp"
            android:gravity="top"
            android:scrollbars="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="455dp">

        <Button
            android:id="@+id/button_io"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:text="@string/action_io"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="447dp" />

        <Button
            android:id="@+id/button_https"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="@string/action_https"
            tools:layout_editor_absoluteX="104dp"
            tools:layout_editor_absoluteY="447dp" />

        <Button
            android:id="@+id/button_https_pin"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:text="@string/action_https_pin"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="447dp" />

        <Button
            android:id="@+id/button_key"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="54dp"
            android:layout_height="wrap_content"
            android:text="@string/action_key"
            tools:layout_editor_absoluteX="223dp"
            tools:layout_editor_absoluteY="336dp" />

        <Button
            android:id="@+id/button_crypt"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/action_crypt"
            tools:layout_editor_absoluteX="120dp"
            tools:layout_editor_absoluteY="325dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
